# html-fragments

./: README.md  main.py  msg_split.py  pyproject.toml
tests/: source.html  test1.html  test2.html  test_msg_split.py
