[tool.poetry]
name = "html-fragments"
version = "0.1.0"
description = ""
authors = ["Extraordinary01 <begli.geld.08.12.01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
